--- a/static-fliphtml5-com/resourceFiles/html5_templates/template/Popular/style/style.css
+++ b/static-fliphtml5-com/resourceFiles/html5_templates/template/Popular/style/style.css
@@ -76,7 +76,8 @@
  @media screen and (min-aspect-ratio: 16/9) {
      .bookContainer {
          background-image: url('/files/shot2.jpg');
-         background-size: cover;
+         background-size: contain;
+         height: 100vh;
          /* hoặc contain tùy thuộc vào nhu cầu */
      }
  }
